--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "browserify -d ./ > ./bundle.js"
+    "build": "browserify ./script.js -o ./bundle.js"
   },
   "repository": {
     "type": "git",
