--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,13 @@
 {
-	"manifest_version": 1,
+	"manifest_version": 2,
 	"name": "agregore-gemini-render",
 	"version": "1.0",
 
 	"description": "The gemini rendering functionality for the Agregore Browser",
 
-	"permissions": [
-		"activeTab"
-	],
-
 	"content_scripts": [
 		{
-			"matches": ["*"],
+			"matches": ["<all_urls>"],
 			"js": [
 				"bundle.js"
 			]
